| Summary: | ASTERISK-22222: TestSuite: Attended Transfer Feature test fails | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | Asterisk12 |
| Date Opened: | 2013-07-30 13:59:44 | Date Closed: | 2013-08-15 07:24:01 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_local Tests/testsuite |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | See reference notes:
{noformat} Running ['tests/feature_attended_transfer/run-test'] ... Starting Asterisk Logging in to the AMI Connected to AMI 2 Connected to AMI 1 Checking Userevent Checking Userevent Status of charlie is SUCCESS Checking results... Checking Userevent Checking Userevent Checking Userevent Checking Userevent Status of charlie_alpha is SUCCESS Checking results... Checking Userevent Status of alpha is FAILURE Checking Userevent Checking Userevent Checking Userevent Status of bravo is FAILURE Stopping Reactor ... Stopping Reactor ... {noformat} | ||
| Comments: | By: Kinsey Moore (kmoore) 2013-08-13 15:11:54.047-0500 The only thing causing this test to fail appears to be that the bridge created by the attended transfer code is not passing DTMF across it. I have yet to figure out why that is. | ||